--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^4.2.0",
     "chai-bytes": "^0.1.2",
     "cross-env": "^5.2.0",
+    "crypto-ld": "^3.7.0",
     "eslint": "^5.16.0",
     "eslint-config-digitalbazaar": "^2.0.0",
     "karma": "^4.0.1",
