--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-ld": "^3.7.0",
     "eslint": "^5.16.0",
     "eslint-config-digitalbazaar": "^2.0.0",
+    "http-signature-zcap-verify": "^1.0.2",
     "karma": "^4.0.1",
     "karma-babel-preprocessor": "^8.0.0",
     "karma-chai": "^0.1.0",
