--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "dependencies": {
     "base64url-universal": "^1.0.0",
     "esm": "^3.2.22",
+    "http-signature-header": "^1.3.0",
     "isomorphic-webcrypto": "^2.3.4",
-    "http-signature-header": "^1.3.0"
+    "pako": "^1.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
