--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "util.js"
   ],
   "dependencies": {
+    "@digitalbazaar/http-digest-header": "^1.0.0",
     "base64url-universal": "^1.0.0",
     "esm": "^3.2.22",
     "http-signature-header": "^1.3.0",
