--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@digitalbazaar/http-digest-header": "^1.0.0",
     "base64url-universal": "^1.0.0",
     "esm": "^3.2.22",
-    "http-signature-header": "github:digitalbazaar/http-signature-header",
+    "http-signature-header": "^2.0.0",
     "isomorphic-webcrypto": "^2.3.4",
     "pako": "^1.0.11"
   },
