--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-node",
+    "test": "npm run lint && npm run test-node && npm run test-karma",
     "test-node": "cross-env NODE_ENV=test mocha -r esm --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} --require tests/test-mocha.js tests/*.spec.js",
     "test-karma": "karma start karma.conf.js",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary npm run test-node",
@@ -35,14 +35,15 @@
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/runtime": "^7.4.3",
+    "@digitalbazaar/ed25519-signature-2020": "^2.1.0",
+    "@digitalbazaar/ed25519-verification-key-2020": "^2.1.1",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "chai-bytes": "^0.1.2",
     "cross-env": "^5.2.0",
-    "crypto-ld": "^3.7.0",
     "eslint": "^7.14.0",
     "eslint-config-digitalbazaar": "^2.6.1",
-    "http-signature-zcap-verify": "^2.0.0",
+    "http-signature-zcap-verify": "^6.0.0",
     "karma": "^6.1.1",
     "karma-babel-preprocessor": "^8.0.0",
     "karma-chai": "^0.1.0",
@@ -56,6 +57,7 @@
     "nyc": "^15.0.0",
     "path-to-regexp": "^3.0.0",
     "route-params": "^0.2.0",
+    "security-context": "^4.0.0",
     "sinon": "^9.0.0",
     "uuid-random": "^1.0.8",
     "webpack": "^5.24.2"
