--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-signature-zcap-invoke",
-  "version": "3.0.1-0",
+  "version": "3.1.0",
   "description": "A library for invoking Authorization Capabilities via HTTP signatures",
   "license": "BSD-3-Clause",
   "main": "index.js",
