Update tests to comply with new zcapld.

--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "@babel/runtime": "^7.4.3",
     "@digitalbazaar/ed25519-signature-2020": "^2.1.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^2.1.1",
+    "@digitalbazaar/zcapld": "digitalbazaar/zcapld#simplify-controller",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "chai-bytes": "^0.1.2",
     "cross-env": "^5.2.0",
+    "crypto-ld": "^6.0.0",
     "eslint": "^7.14.0",
     "eslint-config-digitalbazaar": "^2.6.1",
-    "http-signature-zcap-verify": "^6.0.0",
+    "http-signature-zcap-verify": "digitalbazaar/http-signature-zcap-verify#zcapld-upgrade",
     "karma": "^6.1.1",
     "karma-babel-preprocessor": "^8.0.0",
     "karma-chai": "^0.1.0",
