--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "crypto-ld": "^6.0.0",
     "eslint": "^7.14.0",
     "eslint-config-digitalbazaar": "^2.6.1",
-    "http-signature-zcap-verify": "digitalbazaar/http-signature-zcap-verify#zcapld-upgrade",
+    "http-signature-zcap-verify": "^9.0.0",
     "karma": "^6.1.1",
     "karma-babel-preprocessor": "^8.0.0",
     "karma-chai": "^0.1.0",
