--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   ],
   "dependencies": {
     "@digitalbazaar/http-digest-header": "^1.0.0",
+    "@digitalbazaar/http-signature-header": "^4.0.1",
     "base64url-universal": "^1.0.0",
     "esm": "^3.2.22",
-    "http-signature-header": "^2.0.0",
     "pako": "^1.0.11"
   },
   "devDependencies": {
