--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/runtime": "^7.4.3",
     "@digitalbazaar/ed25519-signature-2020": "^2.1.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^2.1.1",
+    "@digitalbazaar/http-signature-zcap-verify": "^10.0.0",
     "@digitalbazaar/zcap": "^7.0.0",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
@@ -42,7 +43,6 @@
     "crypto-ld": "^6.0.0",
     "eslint": "^7.14.0",
     "eslint-config-digitalbazaar": "^2.6.1",
-    "http-signature-zcap-verify": "^9.0.0",
     "karma": "^6.1.1",
     "karma-babel-preprocessor": "^8.0.0",
     "karma-chai": "^0.1.0",
