--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digitalbazaar/http-signature-zcap-invoke",
-  "version": "5.0.2-0",
+  "version": "5.0.2",
   "description": "A library for invoking Authorization Capabilities via HTTP signatures",
   "license": "BSD-3-Clause",
   "main": "index.js",
