--- a/package.json
+++ b/package.json
@@ -3,63 +3,54 @@
   "version": "5.0.4-0",
   "description": "A library for invoking Authorization Capabilities via HTTP signatures",
   "license": "BSD-3-Clause",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm run lint && npm run test-node && npm run test-karma",
-    "test-node": "cross-env NODE_ENV=test mocha -r esm --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} --require tests/test-mocha.js tests/*.spec.js",
-    "test-karma": "karma start karma.conf.js",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary npm run test-node",
-    "coverage-ci": "cross-env NODE_ENV=test nyc --reporter=text-lcov npm run test-node > coverage.lcov",
-    "coverage-report": "nyc report",
-    "lint": "eslint ."
+  "type": "module",
+  "exports": "./lib/index.js",
+  "browser": {
+    "./lib/util.js": "./lib/util-browser.js"
   },
   "files": [
-    "index.js",
-    "main.js",
-    "util-browser.js",
-    "util.js"
+    "lib"
   ],
+  "scripts": {
+    "test": "npm run lint && npm run test-node && npm run test-karma",
+    "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} --require tests/test-mocha.js tests/*.spec.js",
+    "test-karma": "karma start karma.conf.cjs",
+    "coverage": "cross-env NODE_ENV=test c8 --reporter=lcov --reporter=text-summary npm run test-node",
+    "coverage-ci": "cross-env NODE_ENV=test c8 --reporter=lcovonly --reporter text npm run test-node",
+    "coverage-report": "c8 report",
+    "lint": "eslint ."
+  },
   "dependencies": {
-    "@digitalbazaar/http-digest-header": "^1.0.0",
-    "@digitalbazaar/http-signature-header": "^4.0.1",
-    "base64url-universal": "^1.0.0",
-    "esm": "^3.2.22",
+    "@digitalbazaar/http-digest-header": "^2.0.0",
+    "@digitalbazaar/http-signature-header": "^5.0.0",
+    "base64url-universal": "^2.0.0",
     "pako": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
-    "@digitalbazaar/ed25519-signature-2020": "^2.1.0",
-    "@digitalbazaar/ed25519-verification-key-2020": "^2.1.1",
-    "@digitalbazaar/http-signature-zcap-verify": "^10.0.0",
-    "@digitalbazaar/zcap": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "chai": "^4.2.0",
-    "chai-bytes": "^0.1.2",
-    "cross-env": "^5.2.0",
-    "crypto-ld": "^6.0.0",
-    "eslint": "^7.14.0",
-    "eslint-config-digitalbazaar": "^2.6.1",
-    "karma": "^6.1.1",
-    "karma-babel-preprocessor": "^8.0.0",
+    "@digitalbazaar/ed25519-signature-2020": "^4.0.1",
+    "@digitalbazaar/ed25519-verification-key-2020": "^4.0.0",
+    "@digitalbazaar/http-signature-zcap-verify": "^11.0.0",
+    "@digitalbazaar/zcap": "^8.0.0",
+    "c8": "^7.11.2",
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
+    "crypto-ld": "^7.0.0",
+    "eslint": "^8.14.0",
+    "eslint-config-digitalbazaar": "^3.0.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "karma": "^6.3.19",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
-    "mocha": "^8.3.0",
+    "mocha": "^9.2.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.0.0",
-    "path-to-regexp": "^3.0.0",
-    "route-params": "^0.2.0",
     "security-context": "^4.0.0",
-    "sinon": "^9.0.0",
-    "uuid-random": "^1.0.8",
-    "webpack": "^5.24.2"
+    "uuid": "^8.3.2",
+    "webpack": "^5.72.0"
   },
   "repository": {
     "type": "git",
@@ -85,14 +76,10 @@
     "url": "https://github.com/digitalbazaar/http-signature-zcap-invoke/issues"
   },
   "homepage": "https://github.com/digitalbazaar/http-signature-zcap-invoke",
-  "module": "main.js",
-  "browser": {
-    "./util.js": "./util-browser.js"
-  },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
-  "nyc": {
+  "c8": {
     "exclude": [
       "tests"
     ],
